fix small typo in notebook

--- a/Handwritten_Digit_Recognition.ipynb
+++ b/Handwritten_Digit_Recognition.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,16 +67,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x142822a90>"
+       "<matplotlib.image.AxesImage at 0x141455fd0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "(28, 28)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,23 +313,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "469/469 [==============================] - 34s 73ms/step - loss: 1.6996 - accuracy: 0.6837 - val_loss: 1.6145 - val_accuracy: 0.7127\n",
-      "Epoch 2/5\n",
-      "469/469 [==============================] - 31s 66ms/step - loss: 1.5438 - accuracy: 0.7167 - val_loss: 1.4438 - val_accuracy: 0.7429\n",
-      "Epoch 3/5\n",
-      "469/469 [==============================] - 35s 75ms/step - loss: 1.3704 - accuracy: 0.7446 - val_loss: 1.2637 - val_accuracy: 0.7701\n",
-      "Epoch 4/5\n",
-      "469/469 [==============================] - 34s 72ms/step - loss: 1.1964 - accuracy: 0.7678 - val_loss: 1.0922 - val_accuracy: 0.7912\n",
-      "Epoch 5/5\n",
-      "469/469 [==============================] - 31s 65ms/step - loss: 1.0380 - accuracy: 0.7867 - val_loss: 0.9428 - val_accuracy: 0.8099\n"
+      "Epoch 1/10\n",
+      "469/469 [==============================] - 41s 88ms/step - loss: 2.2691 - accuracy: 0.2060 - val_loss: 2.2392 - val_accuracy: 0.3262\n",
+      "Epoch 2/10\n",
+      "469/469 [==============================] - 36s 77ms/step - loss: 2.2019 - accuracy: 0.4124 - val_loss: 2.1557 - val_accuracy: 0.4813\n",
+      "Epoch 3/10\n",
+      "469/469 [==============================] - 37s 78ms/step - loss: 2.0992 - accuracy: 0.5111 - val_loss: 2.0274 - val_accuracy: 0.5494\n",
+      "Epoch 4/10\n",
+      "469/469 [==============================] - 36s 77ms/step - loss: 1.9433 - accuracy: 0.5696 - val_loss: 1.8350 - val_accuracy: 0.6063\n",
+      "Epoch 5/10\n",
+      "469/469 [==============================] - 35s 76ms/step - loss: 1.7207 - accuracy: 0.6371 - val_loss: 1.5765 - val_accuracy: 0.6860\n",
+      "Epoch 6/10\n",
+      "469/469 [==============================] - 36s 76ms/step - loss: 1.4494 - accuracy: 0.7129 - val_loss: 1.2942 - val_accuracy: 0.7587\n",
+      "Epoch 7/10\n",
+      "469/469 [==============================] - 36s 76ms/step - loss: 1.1863 - accuracy: 0.7633 - val_loss: 1.0507 - val_accuracy: 0.7931\n",
+      "Epoch 8/10\n",
+      "469/469 [==============================] - 36s 78ms/step - loss: 0.9777 - accuracy: 0.7907 - val_loss: 0.8723 - val_accuracy: 0.8139\n",
+      "Epoch 9/10\n",
+      "469/469 [==============================] - 37s 80ms/step - loss: 0.8300 - accuracy: 0.8083 - val_loss: 0.7490 - val_accuracy: 0.8301\n",
+      "Epoch 10/10\n",
+      "469/469 [==============================] - 37s 78ms/step - loss: 0.7271 - accuracy: 0.8228 - val_loss: 0.6629 - val_accuracy: 0.8414\n"
      ]
     }
    ],
@@ -368,13 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow/python/ops/resource_variable_ops.py:1817: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "If using Keras pass *_constraint arguments to layers.\n",
       "INFO:tensorflow:Assets written to: my_MNIST_model/assets\n"
      ]
     }
@@ -388,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,14 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 28, 28, 1)\n"
+      "(28, 28)\n"
      ]
     },
     {
@@ -442,7 +455,7 @@
     "new_image = cv2.imread(\"./my_image_1.png\", cv2.IMREAD_GRAYSCALE)\n",
     "new_image = cv2.resize(new_image, (28, 28))\n",
     "\n",
-    "print(image_data.shape)\n",
+    "print(new_image.shape)\n",
     "plt.imshow(new_image)\n",
     "\n",
     "new_image = np.expand_dims(new_image, 2)\n",
@@ -454,21 +467,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0000000e+00 0.0000000e+00 0.0000000e+00 2.4925232e-08 0.0000000e+00\n",
-      " 1.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00 0.0000000e+00]\n"
+      "1.0\n"
      ]
     }
    ],
    "source": [
     "pred = model.predict(image_data)[0]\n",
-    "print(pred)"
+    "print(pred[3])"
    ]
   },
   {
